[tool.poetry]
name = "swift-oauth2-client"
version = "0.5.0"
description = "Make authenticated API calls using OAuth2 in Python applications"
authors = ["Swift Software Group <hello@swiftsoftwaregroup.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "oauth2_client", from = "src"}]
homepage = "https://github.com/swiftsoftwaregroup/swift-oauth2-client"
repository = "https://github.com/swiftsoftwaregroup/swift-oauth2-client"
documentation = "https://swiftsoftwaregroup.github.io/swift-oauth2-client"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
httpx = "^0.27.2"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.21.0"
respx = "^0.21.1"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.30"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
